--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,6 +3,8 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+
+
 parameters:
     locale: 'en'
 
@@ -11,6 +13,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -24,5 +27,11 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # config/packages/security.yaml
+
+
